<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="90dp"
            android:src="@drawable/sportopia_logo1"
            />
        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_to_sportopia"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="200dp"
            />


        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom_bg"
            android:hint="@string/full_name"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:layout_below="@+id/tv_welcome"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:layout_below="@id/et_fullname"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:layout_below="@+id/et_email"
            />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom_bg"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:layout_below="@+id/et_password"
            />
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_below="@id/et_confirm_password"

            />

        <TextView
            android:id="@+id/tv_sigup_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_signup_with"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_below="@id/btn_signup"
            android:layout_marginTop="20sp"
            />

        <ImageView
            android:id="@+id/iv_fb_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook_icon"
            android:layout_marginTop="15dp"
            android:layout_marginStart="60dp"
            android:layout_below="@id/tv_sigup_with"

            />
        <ImageView
            android:id="@+id/iv_google_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google_icon"
            android:layout_marginStart="170dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_sigup_with"

            />
        <ImageView
            android:id="@+id/iv_apple_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/apple_icon"
            android:layout_marginStart="270dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_sigup_with"

            />

    </RelativeLayout>
    
</ScrollView>